# build-nanogpt

./: .gitignore  fineweb.py  play.ipynb  pyproject.toml  train_gpt2.py
scripts/: configure_remote_ssh.py  rsync_remote.py
